# bert-classification-tutorial

./: .envrc  .gitignore  LICENSE  README.md  metrics.csv  pyproject.toml  run.sh
results/: all.csv  best.csv
src/: aggregate.py  download.sh  prepare.py  train.py  utils.py
